# seeyou-cup-rs

./: Cargo.toml  README.md
docs/: SeeYou_CUP_file_format.md
examples/: parse_and_display.rs  validate_folder.rs
proptest-regressions/: parser.txt
src/: error.rs  lib.rs  parser.rs  spec.rs  types.rs  writer.rs
src/parser/: basics.rs  column_map.rs  mod.rs  task.rs  waypoint.rs
src/types/: dimensions.rs  mod.rs  task.rs  waypoint.rs
src/writer/: basics.rs  mod.rs  task.rs  waypoint.rs
tests/: edge_cases_test.rs  encoding_test.rs  file_format_test.rs  integration_test.rs  task_options_test.rs  waypoint_fields_test.rs  writer_test.rs
tests/fixtures/: 709-km-Dreieck-DMSt-Aachen-Stolberg-TV.cup  EC25.cup
tests/snapshots/: integration_test__fixture_with_task.snap  writer_test__all_waypoint_styles.snap  writer_test__comprehensive_roundtrip.snap  writer_test__coordinate_boundary_values_antimeridian.snap  writer_test__coordinate_boundary_values_north_pole.snap  writer_test__coordinate_boundary_values_precision_test.snap  writer_test__coordinate_boundary_values_prime_meridian.snap  writer_test__coordinate_boundary_values_south_pole.snap  writer_test__coordinate_boundary_values_west_antimeridian.snap  writer_test__multiple_tasks.snap  writer_test__task_basic.snap  writer_test__task_with_all_features.snap  writer_test__write_basic_waypoint.snap  writer_test__write_csv_escaping.snap  writer_test__write_empty_cup_file.snap  writer_test__write_multiline_fields.snap
