[package]
name = "seeyou-cup"
version = "0.1.0"
description = "A Rust library for parsing and writing SeeYou CUP files, commonly used in aviation and gliding for waypoint and task data"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Turbo87/seeyou-cup-rs"
edition = "2024"
exclude = ["docs/*", "examples/*", "tests/*", ".gitignore"]

[dependencies]
csv = "1.3.1"
encoding_rs = "0.8.35"
thiserror = "2.0.17"

[dev-dependencies]
claims = "=0.8.0"
insta = "=1.43.2"
proptest = "=1.8.0"
